[package]
name = "grin_api_v2"
version = "0.1.0"
authors = ["Ignotus Peverell <igno.peverell@protonmail.com>"]
workspace = ".."

[dependencies]
grin_core = { path = "../core" }
grin_chain = { path = "../chain" }
grin_pool = { path = "../pool" }
grin_store = { path = "../store" }
grin_util = { path = "../util" }
secp256k1zkp = { path = "../secp256k1zkp" }

hyper = "~0.10.13"
iron = "~0.5.1"
bodyparser = "~0.7.0"

log = "~0.3"
router = "~0.5.1"
serde = "~1.0.8"
serde_derive = "~1.0.8"
serde_json = "~1.0.2"
